--- a/index.html
+++ b/index.html
@@ -205,21 +205,28 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
-                                <!-- Icon Divider-->
-                                <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                    <div class="divider-custom-line"></div>
-                                </div>
+
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
+                                <img class="img-fluid rounded mb-5" src="assets/img/img2.jpg" alt="..." />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
-                                </p>
+                                <div
+                                    style="font-size: 13px; font-weight: 400; color: #000000; line-height: 1.75; text-align: left;">
+                                    <strong>HOSE, KIM</strong><br />
+                                    기억 <span style="font-size: 10px;">(캔버스에 수채화, 2022. 116 x 80 cm)</span>
+                                    시와 공간이 주는 의미는 참 다양하다.<br />
+                                    상상, 체험, 향수, 감정의 전이 등등 사람에 따라, 혹은 시간에 따라 가지각색 의미를 가지게 되곤한다.<br />
+                                    이번에는 시와 공간이라는 것에 기억이라는 의미를 부여했다.<br />
+                                    시를 쓰는 이와 읽는 이에게 동시적으로 존재하는 것은 기억 같다.<br />
+                                    기억을 쓰고, 기억을 읽는다.<br />
+                                    그것이 아니더라도 결국 우리의 모든 것들은 (창작,행동,성격 •••) 기억이라는 것에 영향을 받곤한다.<br />
+                                    공간 또한 기억을 불러 일으키는 가장 큰 요인 중 하나이다.<br />
+                                    과거에 살았던 곳에 가보는 것, 누군가와 함께 있었던 자리,<br />
+                                    내가 존재 했던 곳.<br />
+                                    그리고 언젠가는 과거의 공간이 되고 그리워하거나 기억하게 될 지금의 공간.<br />
+                                    작업은 평소처럼 지극히 주관적인 경험과 느낌의 재현이다.<br />
+                                    기억으로 밖에 돌아갈 수 없는 공간에 대한 재현과 그 위에 덧칠해진 시의 달콤한 단어와 같은 연출과 애정이다.<br />
+
+                                </div>
 
                             </div>
                         </div>
@@ -239,22 +246,22 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
-                                <!-- Icon Divider-->
-                                <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                    <div class="divider-custom-line"></div>
-                                </div>
-                                <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..." />
-                                <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
-                                </p>
 
+                                <!-- Portfolio Modal - Image-->
+                                <img class="img-fluid rounded mb-5" src="assets/img/img3.png" alt="..." />
+                                <!-- Portfolio Modal - Text-->
+                                <div
+                                    style="font-size: 13px; font-weight: 400; color: #000000; line-height: 1.75; text-align: left;">
+                                    <strong>NOORI, NOH</strong><br />
+                                    고전의 그 많은 책들이 층층히 쌓였다.<br />
+                                    책 한 권을 뽑아 달빛에 읽어보았더니 고전의 백미 구운몽이었다.<br />
+                                    거기에서 팔선녀들이 차례로 까르르 웃으며 나오는 것이 아닌가.<br />
+                                    화관무를 추고 있다.<br />
+                                    마치 양소유라도 된 것 같다.<br />
+                                    모든 것이 물거품 같고, 그림자 같고, 이슬과 번개와 같다.<br />
+                                    구운몽을 읽었고 양소유, 팔선녀까지 만났다.<br />
+                                    이렇게까지 좋을 수 없고 행복할 수 없다.<br />
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -273,21 +280,25 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Controller</h2>
-                                <!-- Icon Divider-->
-                                <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                    <div class="divider-custom-line"></div>
-                                </div>
+
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="..." />
+                                <img class="img-fluid rounded mb-5" src="assets/img/img4.jpg" alt="..." />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
-                                </p>
+                                <div
+                                    style="font-size: 13px; font-weight: 400; color: #000000; line-height: 1.75; text-align: left;">
+                                    <strong>DAKYUNG, LEE</strong><br />
+                                    흩어짐 <span style="font-size: 10px;">(면천에 유채, 2022. 90.9 x 72.7 cm)</span>
+                                    완전히 당신을 다독이던 눈을<br />
+                                    끊임없이 유영한 탓에 그 세계를<br />
+                                    다만 당신의 마음을 짐작도 할 수 없었던 탓에<br />
+                                    아주 혼탁하고 미적지근하여 섞이지도 않던 그 흔들림<br />
+                                    언제인지 나를 아프게 했던 아네모네는<br />
+                                    미련도 묻혀두지 않고 정처도 없었을까<br />
+                                    별안간 수면 위로 떠오른 정제된 그리움과 직관적인 시선과<br />
+                                    가라앉는 백색왜성과 당신을 향유하게 된 기분<br />
+                                    차라리 기도를 하는 편이 나았을 거라는 그런 생각<br />
+
+                                </div>
 
                             </div>
                         </div>
