--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <!-- Copyright Section-->
     <div class=" text-center text-black">
-        <div class="container"><small>Copyright &copy; Your Website 2022</small></div>
+        <div class="container"><small>Copyright &copy;2022. LUCY All rights reserved.</small></div>
     </div>
     <!-- Portfolio Modals-->
     <!-- Portfolio Modal 1-->
