feat / 이미지 저장 수정

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </script>
 </head>
 
-<body id="page-top">
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" id="page-top"
+    style="max-width: 500px;">
 
     <!-- Masthead-->
     <header>
