feat / 인스타 링크 추가

--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@
                                 <!-- Portfolio Modal - Text-->
                                 <div
                                     style="font-size: 14px; font-weight: 400; color: #000000; line-height: 1.75; text-align: left;">
-                                    <strong>HYOEUN, AN</strong><br />
+                                    <strong>HYOEUN, AN</strong><span
+                                        style="color:#666; font-size:10px;margin-left: 10px;"><a
+                                            href="https://www.instagram.com/hyoilla_0215/">@hyoilla_0215</a></span><br />
                                     心海 <span style="font-size: 10px;">(순지에 채색, 2022. 66 x 130 cm)</span>
                                     <br />
                                     깊이를 알 수 없는 마음이<br />
@@ -218,8 +220,10 @@
                                 <!-- Portfolio Modal - Text-->
                                 <div
                                     style="font-size: 13px; font-weight: 400; color: #000000; line-height: 1.75; text-align: left;">
-                                    <strong>HOSE, KIM</strong><br />
-                                    기억 <span style="font-size: 10px;">(캔버스에 수채화, 2022. 116 x 80 cm)</span>
+                                    <strong>HOSE, KIM</strong><span
+                                        style="color:#666; font-size:10px;margin-left: 10px;"><a
+                                            href="https://www.instagram.com/titl9378/">@titl9378</a></span><br />
+                                    기억 <span style="font-size: 10px;">(캔버스에 수채화, 2022. 116 x 80 cm)</span><br />
                                     시와 공간이 주는 의미는 참 다양하다.<br />
                                     상상, 체험, 향수, 감정의 전이 등등 사람에 따라, 혹은 시간에 따라 가지각색 의미를 가지게 되곤한다.<br />
                                     이번에는 시와 공간이라는 것에 기억이라는 의미를 부여했다.<br />
@@ -259,7 +263,13 @@
                                 <!-- Portfolio Modal - Text-->
                                 <div
                                     style="font-size: 13px; font-weight: 400; color: #000000; line-height: 1.75; text-align: left;">
-                                    <strong>NOORI, NOH</strong><br />
+                                    <strong>NOORI, NOH</strong><span
+                                        style="color:#666; font-size:10px;margin-left: 10px;"><a
+                                            href="https://www.instagram.com/babenoori_art/">@babenoori_art</a></span><br />
+                                    <span style="font-size: 12px;">The Cloud Dream of the Nine </span><span
+                                        style="font-size: 9px;">(캔버스에 아크릴, 2022. 60.6 x
+                                        50 cm)</span><br />
+
                                     고전의 그 많은 책들이 층층히 쌓였다.<br />
                                     책 한 권을 뽑아 달빛에 읽어보았더니 고전의 백미 구운몽이었다.<br />
                                     거기에서 팔선녀들이 차례로 까르르 웃으며 나오는 것이 아닌가.<br />
@@ -293,7 +303,9 @@
                                 <!-- Portfolio Modal - Text-->
                                 <div
                                     style="font-size: 13px; font-weight: 400; color: #000000; line-height: 1.75; text-align: left;">
-                                    <strong>DAKYUNG, LEE</strong><br />
+                                    <strong>DAKYUNG, LEE</strong><span
+                                        style="color:#666; font-size:10px;margin-left: 10px;"><a
+                                            href="https://www.instagram.com/idarongday/">@idarongday</a></span><br />
                                     흩어짐 <span style="font-size: 10px;">(면천에 유채, 2022. 90.9 x 72.7 cm)</span>
                                     완전히 당신을 다독이던 눈을<br />
                                     끊임없이 유영한 탓에 그 세계를<br />
@@ -309,7 +321,7 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div>https://www.instagram.com/idarongday/
                 </div>
             </div>
         </div>
