fix / 인스타 링크 수정

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
                             </div>
                         </div>
-                    </div>https://www.instagram.com/idarongday/
+                    </div>
                 </div>
             </div>
         </div>
