--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
                     <div style="height: 4px;"></div><span style="font-size: 11px;">Exit 3 of Hongik University Station
                         on the
                         subway</span>
-                    <div style="height: 4px;"></div>
+                    <div style="margin-top:20px ;" onclick="window.open('https://forms.gle/1diu4fT4CfU2q32X9')"> <img
+                            src="./assets/img/큐레이팅 티켓 이미지.png" width="40%" height="auto" />
+                    </div>
                     </p>
                 </section>
             </div>
@@ -169,7 +171,7 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-
+                                https://forms.gle/1diu4fT4CfU2q32X9
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
 
