fix / 디자인 수정

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
             Ticket Open 11월 21일~ 27일(7일간)<br />
 
         </div>
-
+        <div style="    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+" onclick="window.open('https://forms.gle/1diu4fT4CfU2q32X9')"> <img src="./assets/img/큐레이팅 티켓 이미지.png"
+                width="40%" height="auto" />
+        </div>
     </header>
     <!-- Portfolio Section-->
     <section class="page-section portfolio" id="portfolio" style="padding-bottom: 0 ;">
@@ -123,7 +129,7 @@
     <section class="page-section mb-0" id="about">
         <div class="container">
             <!-- About Section Heading-->
-            <h2 class="page-section-heading  text-uppercase  ">오시는길</h2>
+            <h2 class="page-section-heading  text-uppercase" style="font-size:1.5rem ;">오시는길</h2>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
 
@@ -146,9 +152,6 @@
                     <div style="height: 4px;"></div><span style="font-size: 11px;">Exit 3 of Hongik University Station
                         on the
                         subway</span>
-                    <div style="margin-top:20px ;" onclick="window.open('https://forms.gle/1diu4fT4CfU2q32X9')"> <img
-                            src="./assets/img/큐레이팅 티켓 이미지.png" width="40%" height="auto" />
-                    </div>
                     </p>
                 </section>
             </div>
@@ -171,7 +174,7 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                https://forms.gle/1diu4fT4CfU2q32X9
+
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
 
