--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
             <div class="row">
                 <section style="padding: 0px 16px 0px;">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.8501355969092!2d126.94035311531141!3d37.55859447979935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c99cf32bd7cc5%3A0xb802ca07da36f9e0!2z6rCk65-s66asIOyVhOuvuOuUlCDsi6DstIw!5e0!3m2!1sko!2skr!4v1668063256164!5m2!1sko!2skr"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d425.5091053369828!2d126.92307789599457!3d37.565197540893266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c98ef0d2b7b0d%3A0xbe22a026e44d6b98!2z7ISc7Jq47Yq567OE7IucIOuniO2PrOq1rCDshLHrr7jsgrDroZwyOeyViOq4uCAxOA!5e0!3m2!1sko!2skr!4v1668134789636!5m2!1sko!2skr"
                         width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                     <p class="MuiTypography-root MuiTypography-body1 css-9l3uo3" style="font-size: 15px;"><span
                             style="font-weight: bold;">갤러리 아미디 [연남]</span>
                     <div style="height: 4px;"></div>서울특별시 마포구 성미산로 29안길 18 <div style="height: 4px;"></div>
