feat / 배경음악 추가

--- a/index.html
+++ b/index.html
@@ -53,12 +53,18 @@
             Ticket Open 11월 21일~ 27일(7일간)<br />
 
         </div>
+
         <div style="    margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
 " onclick="window.open('https://forms.gle/1diu4fT4CfU2q32X9')"> <img src="./assets/img/큐레이팅 티켓 이미지.png"
                 width="40%" height="auto" />
+        </div>
+        <div style="display:none;">
+            <audio autoplay controls>
+                <source src="./assets/backmusix.mp3" type="audio/mp3">
+            </audio>
         </div>
     </header>
     <!-- Portfolio Section-->
