fix/ 이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
 
         </div>
 
-        <div style="    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-" onclick="window.open('https://forms.gle/1diu4fT4CfU2q32X9')"> <img src="./assets/img/큐레이팅 티켓 이미지.png"
-                width="40%" height="auto" />
+        <div style="margin-top: 20px;display: flex;align-items: center;justify-content: center;"
+            onclick="window.open('https://forms.gle/1diu4fT4CfU2q32X9')">
+
+            <img src="./assets/img/ticket.png" width="40%" height="auto" />
         </div>
         <div style="display:none;">
             <audio autoplay controls>
