feat / 인스타 링크 수정

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                     style="font-size: 14px; font-weight: 400; color: #000000; line-height: 1.75; text-align: left;">
                                     <strong>HYOEUN, AN</strong><span
                                         style="color:#666; font-size:10px;margin-left: 10px;"><a
-                                            href="https://www.instagram.com/hyoilla_0215/">@hyoilla_0215</a></span><br />
+                                            href="https://www.instagram.com/amethyst.__.hyo/">@amethyst.__.hyo</a></span><br />
                                     心海 <span style="font-size: 10px;">(순지에 채색, 2022. 66 x 130 cm)</span>
                                     <br />
                                     깊이를 알 수 없는 마음이<br />
@@ -316,7 +316,7 @@
                                     <strong>DAKYUNG, LEE</strong><span
                                         style="color:#666; font-size:10px;margin-left: 10px;"><a
                                             href="https://www.instagram.com/idarongday/">@idarongday</a></span><br />
-                                    흩어짐 <span style="font-size: 10px;">(면천에 유채, 2022. 90.9 x 72.7 cm)</span>
+                                    흩어짐 <span style="font-size: 10px;">(면천에 유채, 2022. 90.9 x 72.7 cm)</span><br />
                                     완전히 당신을 다독이던 눈을<br />
                                     끊임없이 유영한 탓에 그 세계를<br />
                                     다만 당신의 마음을 짐작도 할 수 없었던 탓에<br />
